examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx
// error[E300]: Type Mismatch
//
// I found a type mismatch.
//
//   examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx:53:18
//    |
// 53 |     let x: Int = 1 + 2.5
//    |                  ^^^^^^^
//    |                  ------- this expression has type `Float`
//
//    |                  ------- this type mismatch is reported here
//
// Note:
//   expected type: Int
//   found type: Float
//   the conflicting types meet at this expression
//
// Help:
//   Try `to_int(...)` if truncating a `Float` to an `Int` is intended.
//
//
// error[E300]: Return Type Mismatch
//
// The body of `main` does not match its declared return type.
//
//   examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx:54:5
//    |
// 52 | fn main() -> Unit {
//    |              ---- `main` was declared to return `Unit`
// 53 |     let x: Int = 1 + 2.5
// 54 |     x
//    |     ^
//    |     - this expression has type `Int`
//
// Note:
//   declared return type: Unit
//   body type: Int
//
// Help:
//   Return a `Unit` value from `main` or change its annotation.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300
// expect-error: E300

fn main() -> Unit {
    let x: Int = 1 + 2.5
    x
}
